# SGD

./: All free stuff for my game.txt  CMakeLists.txt  Platform.cpp  Player.cpp  Player.h  bunny_world_build_and_run.bat  main.cpp  main.py
cmake/: FindSDL2.cmake
src/: Constants.h  Main.cpp  Platform.cpp  Platform.h  Player.cpp  Player.h  main.cpp
